--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,12 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.21.0</version>
                     <configuration>
-                        <suiteXmlFiles>
-                            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
-                        </suiteXmlFiles>
+                        <parallel>classes</parallel>
+                        <threadCount>4</threadCount>
+                        <groups>db</groups>
+                        <!--<suiteXmlFiles>-->
+                            <!--<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>-->
+                        <!--</suiteXmlFiles>-->
                     </configuration>
                 </plugin>
             </plugins>
